# netutils-old

./: .clang-format  .codecov.yml  .travis.yml  CMakeLists.txt  CTestConfig.cmake  netutilsConfig.cmake
.circleci/: config.yml
CMakeModules/: CodeCoverage.cmake  ci_build.cmake
include/netu/: basic_timeout.hpp  completion_handler.hpp  completion_handler_list.hpp  composed_operation.hpp  coro.hpp  coroutine.hpp  synchronized_stream.hpp  synchronized_value.hpp  upcall_guard.hpp
include/netu/detail/: allocators.hpp  assume.hpp  async_completion.hpp  async_utils.hpp  composed_operation.hpp  coroutine.hpp  handler_erasure.hpp  type_traits.hpp
include/netu/impl/: basic_timeout.hpp  completion_handler.hpp  composed_operation.hpp  synchronized_stream.hpp  synchronized_value.hpp
tests/: CMakeLists.txt
tests/extras/include/netu/test/: allocator.hpp  stream.hpp
tests/netu/: basic_connection.cpp  basic_timeout.cpp  completion_handler.cpp  completion_handler_list.cpp  composed_operation.cpp  coro.cpp  synchronized_stream.cpp  synchronized_value.cpp  timed_read_stream.cpp
tests/netu/test/: stream.cpp
